exports[`prefer-at > invalid(1): \"string\"[\"string\".length - 1] 1`] = `

  1 | "string"["string".length - 1]

`;

exports[`prefer-at > invalid(1): \"string\"[\"string\".length - 1] 2`] = `

Message:
> 1 | "string"["string".length - 1]
    |          ^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | "string".at(-1)

`;

exports[`prefer-at > invalid(1): _.last(array) 1`] = `

  1 | _.last(array)

`;

exports[`prefer-at > invalid(1): _.last(array) 2`] = `

Message:
> 1 | _.last(array)
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | array.at(-1)

`;

exports[`prefer-at > invalid(1): array.slice(-1)[0] 1`] = `

  1 | array.slice(-1)[0]

`;

exports[`prefer-at > invalid(1): array.slice(-1)[0] 2`] = `

Message:
> 1 | array.slice(-1)[0]
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-1)

`;

exports[`prefer-at > invalid(1): array.slice(-9, -8)[0] 1`] = `

  1 | array.slice(-9, -8)[0]

`;

exports[`prefer-at > invalid(1): array.slice(-9, -8)[0] 2`] = `

Message:
> 1 | array.slice(-9, -8)[0]
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-9)

`;

exports[`prefer-at > invalid(1): array[0] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | array[0]

`;

exports[`prefer-at > invalid(1): array[0] 2`] = `

Message:
> 1 | array[0]
    |       ^ Prefer \`.at(…)\` over index access.

Output:
  1 | array.at(0)

`;

exports[`prefer-at > invalid(1): array[array.length - 1]; 1`] = `

  1 | array[array.length - 1];

`;

exports[`prefer-at > invalid(1): array[array.length - 1]; 2`] = `

Message:
> 1 | array[array.length - 1];
    |       ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(-1);

`;

exports[`prefer-at > invalid(1): const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 1`] = `

  1 | const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(1): const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 2`] = `

Message:
> 1 | const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                 ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const nodes = getNodes(); nodes.at(-1); nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(1): const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 3`] = `

Message:
> 1 | const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | const nodes = getNodes(); nodes[nodes.length - 1]; nodes.at(-1); _.last(nodes);

`;

exports[`prefer-at > invalid(1): const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 4`] = `

Message:
> 1 | const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                        ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const nodes = getNodes(); nodes[nodes.length - 1]; nodes.slice(-1)[0]; nodes.at(-1);

`;

exports[`prefer-at > invalid(1): string.charAt(string.length - 1); 1`] = `

  1 | string.charAt(string.length - 1);

`;

exports[`prefer-at > invalid(1): string.charAt(string.length - 1); 2`] = `

Message:
> 1 | string.charAt(string.length - 1);
    |               ^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(- 1);

`;

exports[`prefer-at > invalid(1): string.substring(0, 1) 1`] = `

  1 | string.substring(0, 1)

`;

exports[`prefer-at > invalid(1): string.substring(0, 1) 2`] = `

Message:
> 1 | string.substring(0, 1)
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(0)

`;

exports[`prefer-at > invalid(10): (( array.slice(-1)[0] )); 1`] = `

  1 | (( array.slice(-1)[0] ));

`;

exports[`prefer-at > invalid(10): (( array.slice(-1)[0] )); 2`] = `

Message:
> 1 | (( array.slice(-1)[0] ));
    |          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (( array.at(-1) ));

`;

exports[`prefer-at > invalid(10): (( string.charAt(string.length - 1) )); 1`] = `

  1 | (( string.charAt(string.length - 1) ));

`;

exports[`prefer-at > invalid(10): (( string.charAt(string.length - 1) )); 2`] = `

Message:
> 1 | (( string.charAt(string.length - 1) ));
    |                  ^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | (( string.at(- 1) ));

`;

exports[`prefer-at > invalid(10): _.last(getLast(utils.lastOne(array))) 1`] = `

Options:
- getLastElementFunctions:
    - 'getLast'
    - '  utils.lastOne  '

Code:
  1 | _.last(getLast(utils.lastOne(array)))

`;

exports[`prefer-at > invalid(10): _.last(getLast(utils.lastOne(array))) 2`] = `

Message:
> 1 | _.last(getLast(utils.lastOne(array)))
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | getLast(utils.lastOne(array)).at(-1)

`;

exports[`prefer-at > invalid(10): _.last(getLast(utils.lastOne(array))) 3`] = `

Message:
> 1 | _.last(getLast(utils.lastOne(array)))
    |        ^^^^^^^ Prefer \`.at(-1)\` over \`getLast(…)\` to get the last element.

Output:
  1 | _.last(utils.lastOne(array).at(-1))

`;

exports[`prefer-at > invalid(10): _.last(getLast(utils.lastOne(array))) 4`] = `

Message:
> 1 | _.last(getLast(utils.lastOne(array)))
    |                ^^^^^^^^^^^^^ Prefer \`.at(-1)\` over \`utils.lastOne(…)\` to get the last element.

Output:
  1 | _.last(getLast(array.at(-1)))

`;

exports[`prefer-at > invalid(10): array[array.length - (( 1 ))]; 1`] = `

  1 | array[array.length - (( 1 ))];

`;

exports[`prefer-at > invalid(10): array[array.length - (( 1 ))]; 2`] = `

Message:
> 1 | array[array.length - (( 1 ))];
    |       ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(- (( 1 )));

`;

exports[`prefer-at > invalid(10): array[array.length - 1] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | array[array.length - 1]

`;

exports[`prefer-at > invalid(10): array[array.length - 1] 2`] = `

Message:
> 1 | array[array.length - 1]
    |       ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(-1)

`;

exports[`prefer-at > invalid(10): const nodes = alias; const alias = nodes; _.last(nodes); 1`] = `

  1 | const nodes = alias; const alias = nodes; _.last(nodes);

`;

exports[`prefer-at > invalid(10): const nodes = alias; const alias = nodes; _.last(nodes); 2`] = `

Message:
> 1 | const nodes = alias; const alias = nodes; _.last(nodes);
    |                                           ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const nodes = alias; const alias = nodes; nodes.at(-1);

`;

exports[`prefer-at > invalid(10): string.substring(index, index + /* comment */ 1) 1`] = `

  1 | string.substring(index, index + /* comment */ 1)

`;

exports[`prefer-at > invalid(10): string.substring(index, index + /* comment */ 1) 2`] = `

Message:
> 1 | string.substring(index, index + /* comment */ 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

`;

exports[`prefer-at > invalid(11): (( array.slice(-1) )).pop(); 1`] = `

  1 | (( array.slice(-1) )).pop();

`;

exports[`prefer-at > invalid(11): (( array.slice(-1) )).pop(); 2`] = `

Message:
> 1 | (( array.slice(-1) )).pop();
    |          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (( array.at(-1) ));

`;

exports[`prefer-at > invalid(11): (string as string).charAt((string as string).length - 1); 1`] = `

  1 | (string as string).charAt((string as string).length - 1);

`;

exports[`prefer-at > invalid(11): (string as string).charAt((string as string).length - 1); 2`] = `

Message:
> 1 | (string as string).charAt((string as string).length - 1);
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | (string as string).at(- 1);

`;

exports[`prefer-at > invalid(11): array[(( array.length - 1 ))]; 1`] = `

  1 | array[(( array.length - 1 ))];

`;

exports[`prefer-at > invalid(11): array[(( array.length - 1 ))]; 2`] = `

Message:
> 1 | array[(( array.length - 1 ))];
    |          ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at((( -1 )));

`;

exports[`prefer-at > invalid(11): let nodes = element.children; nodes = []; _.last(nodes); 1`] = `

  1 | let nodes = element.children; nodes = []; _.last(nodes);

`;

exports[`prefer-at > invalid(11): let nodes = element.children; nodes = []; _.last(nodes); 2`] = `

Message:
> 1 | let nodes = element.children; nodes = []; _.last(nodes);
    |                                           ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | let nodes = element.children; nodes = []; nodes.at(-1);

`;

exports[`prefer-at > invalid(11): string.charAt(9) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | string.charAt(9)

`;

exports[`prefer-at > invalid(11): string.charAt(9) 2`] = `

Message:
> 1 | string.charAt(9)
    |               ^ Prefer \`String#at(…)\` over \`String#charAt(…)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(9)

`;

exports[`prefer-at > invalid(11): string.substring(0, /* between */ 1) 1`] = `

  1 | string.substring(0, /* between */ 1)

`;

exports[`prefer-at > invalid(11): string.substring(0, /* between */ 1) 2`] = `

Message:
> 1 | string.substring(0, /* between */ 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

`;

exports[`prefer-at > invalid(12): (( array ))[array.length - 1]; 1`] = `

  1 | (( array ))[array.length - 1];

`;

exports[`prefer-at > invalid(12): (( array ))[array.length - 1]; 2`] = `

Message:
> 1 | (( array ))[array.length - 1];
    |             ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | (( array )).at(-1);

`;

exports[`prefer-at > invalid(12): (( array.slice(-1).pop ))(); 1`] = `

  1 | (( array.slice(-1).pop ))();

`;

exports[`prefer-at > invalid(12): (( array.slice(-1).pop ))(); 2`] = `

Message:
> 1 | (( array.slice(-1).pop ))();
    |          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (( array.at(-1) ));

`;

exports[`prefer-at > invalid(12): <string>string.charAt((<string>string).length - 1); 1`] = `

  1 | <string>string.charAt((<string>string).length - 1);

`;

exports[`prefer-at > invalid(12): <string>string.charAt((<string>string).length - 1); 2`] = `

Message:
> 1 | <string>string.charAt((<string>string).length - 1);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | <string>string.at(- 1);

`;

exports[`prefer-at > invalid(12): const {children: nodes} = element; _.last(nodes); 1`] = `

  1 | const {children: nodes} = element; _.last(nodes);

`;

exports[`prefer-at > invalid(12): const {children: nodes} = element; _.last(nodes); 2`] = `

Message:
> 1 | const {children: nodes} = element; _.last(nodes);
    |                                    ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const {children: nodes} = element; nodes.at(-1);

`;

exports[`prefer-at > invalid(12): string.charAt(5 + 9) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | string.charAt(5 + 9)

`;

exports[`prefer-at > invalid(12): string.charAt(5 + 9) 2`] = `

Message:
> 1 | string.charAt(5 + 9)
    |               ^^^^^ Prefer \`String#at(…)\` over \`String#charAt(…)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(5 + 9)

`;

exports[`prefer-at > invalid(12): string.substring((( index )), (( index )) + 1) 1`] = `

  1 | string.substring((( index )), (( index )) + 1)

`;

exports[`prefer-at > invalid(12): string.substring((( index )), (( index )) + 1) 2`] = `

Message:
> 1 | string.substring((( index )), (( index )) + 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at((( index )))

`;

exports[`prefer-at > invalid(13): (( array.slice(-1).pop() )); 1`] = `

  1 | (( array.slice(-1).pop() ));

`;

exports[`prefer-at > invalid(13): (( array.slice(-1).pop() )); 2`] = `

Message:
> 1 | (( array.slice(-1).pop() ));
    |          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (( array.at(-1) ));

`;

exports[`prefer-at > invalid(13): (( array[array.length - 1] )); 1`] = `

  1 | (( array[array.length - 1] ));

`;

exports[`prefer-at > invalid(13): (( array[array.length - 1] )); 2`] = `

Message:
> 1 | (( array[array.length - 1] ));
    |          ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | (( array.at(-1) ));

`;

exports[`prefer-at > invalid(13): const nodes = element.children; function foo(nodes) { return _.last(nodes); } 1`] = `

  1 | const nodes = element.children; function foo(nodes) { return _.last(nodes); }

`;

exports[`prefer-at > invalid(13): const nodes = element.children; function foo(nodes) { return _.last(nodes); } 2`] = `

Message:
> 1 | const nodes = element.children; function foo(nodes) { return _.last(nodes); }
    |                                                              ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const nodes = element.children; function foo(nodes) { return nodes.at(-1); }

`;

exports[`prefer-at > invalid(13): const offset = 5;string.charAt(offset + 9) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | const offset = 5;string.charAt(offset + 9)

`;

exports[`prefer-at > invalid(13): const offset = 5;string.charAt(offset + 9) 2`] = `

Message:
> 1 | const offset = 5;string.charAt(offset + 9)
    |                                ^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(…)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | const offset = 5;string.at(offset + 9)

`;

exports[`prefer-at > invalid(13): string!.charAt(string!.length - 1); 1`] = `

  1 | string!.charAt(string!.length - 1);

`;

exports[`prefer-at > invalid(13): string!.charAt(string!.length - 1); 2`] = `

Message:
> 1 | string!.charAt(string!.length - 1);
    |                ^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string!.at(- 1);

`;

exports[`prefer-at > invalid(13): string.substring((( index )) - 1, (( index ))) 1`] = `

  1 | string.substring((( index )) - 1, (( index )))

`;

exports[`prefer-at > invalid(13): string.substring((( index )) - 1, (( index ))) 2`] = `

Message:
> 1 | string.substring((( index )) - 1, (( index )))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at((( index )) - 1)

`;

exports[`prefer-at > invalid(14): (( string )).substring(index, index + 1) 1`] = `

  1 | (( string )).substring(index, index + 1)

`;

exports[`prefer-at > invalid(14): (( string )).substring(index, index + 1) 2`] = `

Message:
> 1 | (( string )).substring(index, index + 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | (( string )).at(index)

`;

exports[`prefer-at > invalid(14): _.last(document[\"querySelectorAll\"](\"li\")); 1`] = `

  1 | _.last(document["querySelectorAll"]("li"));

`;

exports[`prefer-at > invalid(14): _.last(document[\"querySelectorAll\"](\"li\")); 2`] = `

Message:
> 1 | _.last(document["querySelectorAll"]("li"));
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | document["querySelectorAll"]("li").at(-1);

`;

exports[`prefer-at > invalid(14): array.slice(-1)[0].pop().shift().slice(-1) 1`] = `

  1 | array.slice(-1)[0].pop().shift().slice(-1)

`;

exports[`prefer-at > invalid(14): array.slice(-1)[0].pop().shift().slice(-1) 2`] = `

Message:
> 1 | array.slice(-1)[0].pop().shift().slice(-1)
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-1).pop().shift().slice(-1)

`;

exports[`prefer-at > invalid(14): array[array.length - 1].pop().shift()[0]; 1`] = `

  1 | array[array.length - 1].pop().shift()[0];

`;

exports[`prefer-at > invalid(14): array[array.length - 1].pop().shift()[0]; 2`] = `

Message:
> 1 | array[array.length - 1].pop().shift()[0];
    |       ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(-1).pop().shift()[0];

`;

exports[`prefer-at > invalid(14): string.charAt(string /* keep */ .length - 1); 1`] = `

  1 | string.charAt(string /* keep */ .length - 1);

`;

exports[`prefer-at > invalid(14): string.charAt(string /* keep */ .length - 1); 2`] = `

Message:
> 1 | string.charAt(string /* keep */ .length - 1);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

`;

exports[`prefer-at > invalid(14): string.charAt(unknown) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | string.charAt(unknown)

`;

exports[`prefer-at > invalid(14): string.charAt(unknown) 2`] = `

Message:
> 1 | string.charAt(unknown)
    |               ^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(…)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(unknown)

`;

exports[`prefer-at > invalid(15): (array as Foo[]).slice(-1)[0] 1`] = `

  1 | (array as Foo[]).slice(-1)[0]

`;

exports[`prefer-at > invalid(15): (array as Foo[]).slice(-1)[0] 2`] = `

Message:
> 1 | (array as Foo[]).slice(-1)[0]
    |                  ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (array as Foo[]).at(-1)

`;

exports[`prefer-at > invalid(15): a = array[array.length - 1] 1`] = `

  1 | a = array[array.length - 1]

`;

exports[`prefer-at > invalid(15): a = array[array.length - 1] 2`] = `

Message:
> 1 | a = array[array.length - 1]
    |           ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | a = array.at(-1)

`;

exports[`prefer-at > invalid(15): function foo(value: any) { return value[value.length - 1]; } 1`] = `

  1 | function foo(value: any) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(15): function foo(value: any) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: any) { return value[value.length - 1]; }
    |                                         ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: any) { return value.at(-1); }

`;

exports[`prefer-at > invalid(15): string.charAt(1.5) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | string.charAt(1.5)

`;

exports[`prefer-at > invalid(15): string.charAt(1.5) 2`] = `

Message:
> 1 | string.charAt(1.5)
    |               ^^^ Prefer \`String#at(…)\` over \`String#charAt(…)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(1.5)

`;

exports[`prefer-at > invalid(15): string?.substring(index, index + 1) 1`] = `

  1 | string?.substring(index, index + 1)

`;

exports[`prefer-at > invalid(15): string?.substring(index, index + 1) 2`] = `

Message:
> 1 | string?.substring(index, index + 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string?.at(index)

`;

exports[`prefer-at > invalid(16): (array as Foo[]).slice(-1).pop() 1`] = `

  1 | (array as Foo[]).slice(-1).pop()

`;

exports[`prefer-at > invalid(16): (array as Foo[]).slice(-1).pop() 2`] = `

Message:
> 1 | (array as Foo[]).slice(-1).pop()
    |                  ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (array as Foo[]).at(-1)

`;

exports[`prefer-at > invalid(16): const a = array[array.length - 1] 1`] = `

  1 | const a = array[array.length - 1]

`;

exports[`prefer-at > invalid(16): const a = array[array.length - 1] 2`] = `

Message:
> 1 | const a = array[array.length - 1]
    |                 ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const a = array.at(-1)

`;

exports[`prefer-at > invalid(16): function foo(value: any) { return value[value.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(value: any) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(16): function foo(value: any) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: any) { return value[value.length - 1]; }
    |                                         ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: any) { return value.at(-1); }

`;

exports[`prefer-at > invalid(16): string.charAt(1n) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | string.charAt(1n)

`;

exports[`prefer-at > invalid(16): string.charAt(1n) 2`] = `

Message:
> 1 | string.charAt(1n)
    |               ^^ Prefer \`String#at(…)\` over \`String#charAt(…)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(1n)

`;

exports[`prefer-at > invalid(16): string.substring?.(index, index + 1) 1`] = `

  1 | string.substring?.(index, index + 1)

`;

exports[`prefer-at > invalid(16): string.substring?.(index, index + 1) 2`] = `

Message:
> 1 | string.substring?.(index, index + 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at?.(index)

`;

exports[`prefer-at > invalid(17): (<Foo[]>array).slice(-1).pop() 1`] = `

  1 | (<Foo[]>array).slice(-1).pop()

`;

exports[`prefer-at > invalid(17): (<Foo[]>array).slice(-1).pop() 2`] = `

Message:
> 1 | (<Foo[]>array).slice(-1).pop()
    |                ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (<Foo[]>array).at(-1)

`;

exports[`prefer-at > invalid(17): const {a = array[array.length - 1]} = {} 1`] = `

  1 | const {a = array[array.length - 1]} = {}

`;

exports[`prefer-at > invalid(17): const {a = array[array.length - 1]} = {} 2`] = `

Message:
> 1 | const {a = array[array.length - 1]} = {}
    |                  ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const {a = array.at(-1)} = {}

`;

exports[`prefer-at > invalid(17): function foo(value: unknown) { return value[value.length - 1]; } 1`] = `

  1 | function foo(value: unknown) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(17): function foo(value: unknown) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: unknown) { return value[value.length - 1]; }
    |                                             ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: unknown) { return value.at(-1); }

`;

exports[`prefer-at > invalid(17): string.charAt(string.length - 1) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | string.charAt(string.length - 1)

`;

exports[`prefer-at > invalid(17): string.charAt(string.length - 1) 2`] = `

Message:
> 1 | string.charAt(string.length - 1)
    |               ^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(- 1)

`;

exports[`prefer-at > invalid(18): <Foo[]>array.slice(-1)[0] 1`] = `

  1 | <Foo[]>array.slice(-1)[0]

`;

exports[`prefer-at > invalid(18): <Foo[]>array.slice(-1)[0] 2`] = `

Message:
> 1 | <Foo[]>array.slice(-1)[0]
    |              ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | <Foo[]>array.at(-1)

`;

exports[`prefer-at > invalid(18): foo.charAt(bar.length - 1) 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | foo.charAt(bar.length - 1)

`;

exports[`prefer-at > invalid(18): foo.charAt(bar.length - 1) 2`] = `

Message:
> 1 | foo.charAt(bar.length - 1)
    |            ^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(…)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | foo.at(bar.length - 1)

`;

exports[`prefer-at > invalid(18): function foo(value: unknown) { return value[value.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(value: unknown) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(18): function foo(value: unknown) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: unknown) { return value[value.length - 1]; }
    |                                             ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: unknown) { return value.at(-1); }

`;

exports[`prefer-at > invalid(18): typeof array[array.length - 1] 1`] = `

  1 | typeof array[array.length - 1]

`;

exports[`prefer-at > invalid(18): typeof array[array.length - 1] 2`] = `

Message:
> 1 | typeof array[array.length - 1]
    |              ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | typeof array.at(-1)

`;

exports[`prefer-at > invalid(19): <Foo[]>array.slice(-1).shift() 1`] = `

  1 | <Foo[]>array.slice(-1).shift()

`;

exports[`prefer-at > invalid(19): <Foo[]>array.slice(-1).shift() 2`] = `

Message:
> 1 | <Foo[]>array.slice(-1).shift()
    |              ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | <Foo[]>array.at(-1)

`;

exports[`prefer-at > invalid(19): class Foo {bar; baz() {return this.bar[this.bar.length - 1]}} 1`] = `

  1 | class Foo {bar; baz() {return this.bar[this.bar.length - 1]}}

`;

exports[`prefer-at > invalid(19): class Foo {bar; baz() {return this.bar[this.bar.length - 1]}} 2`] = `

Message:
> 1 | class Foo {bar; baz() {return this.bar[this.bar.length - 1]}}
    |                                        ^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | class Foo {bar; baz() {return this.bar.at(-1)}}

`;

exports[`prefer-at > invalid(19): function foo(value: NodeList | string[]) { return value[value.length - 1]; } 1`] = `

  1 | function foo(value: NodeList | string[]) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(19): function foo(value: NodeList | string[]) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: NodeList | string[]) { return value[value.length - 1]; }
    |                                                         ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: NodeList | string[]) { return value.at(-1); }

`;

exports[`prefer-at > invalid(2): _.last(getNodes()); 1`] = `

  1 | _.last(getNodes());

`;

exports[`prefer-at > invalid(2): _.last(getNodes()); 2`] = `

Message:
> 1 | _.last(getNodes());
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | getNodes().at(-1);

`;

exports[`prefer-at > invalid(2): array.slice(-9, -0o10)[0] 1`] = `

  1 | array.slice(-9, -0o10)[0]

`;

exports[`prefer-at > invalid(2): array.slice(-9, -0o10)[0] 2`] = `

Message:
> 1 | array.slice(-9, -0o10)[0]
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-9)

`;

exports[`prefer-at > invalid(2): array?.[array.length - 1]; 1`] = `

  1 | array?.[array.length - 1];

`;

exports[`prefer-at > invalid(2): array?.[array.length - 1]; 2`] = `

Message:
> 1 | array?.[array.length - 1];
    |         ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array?.at(-1);

`;

exports[`prefer-at > invalid(2): array?.slice(-1)[0] 1`] = `

  1 | array?.slice(-1)[0]

`;

exports[`prefer-at > invalid(2): array?.slice(-1)[0] 2`] = `

Message:
> 1 | array?.slice(-1)[0]
    |        ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array?.at(-1)

`;

exports[`prefer-at > invalid(2): array[1] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | array[1]

`;

exports[`prefer-at > invalid(2): array[1] 2`] = `

Message:
> 1 | array[1]
    |       ^ Prefer \`.at(…)\` over index access.

Output:
  1 | array.at(1)

`;

exports[`prefer-at > invalid(2): const string = \"string\"; string[string.length - 1] 1`] = `

  1 | const string = "string"; string[string.length - 1]

`;

exports[`prefer-at > invalid(2): const string = \"string\"; string[string.length - 1] 2`] = `

Message:
> 1 | const string = "string"; string[string.length - 1]
    |                                 ^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const string = "string"; string.at(-1)

`;

exports[`prefer-at > invalid(2): lodash.last(array) 1`] = `

  1 | lodash.last(array)

`;

exports[`prefer-at > invalid(2): lodash.last(array) 2`] = `

Message:
> 1 | lodash.last(array)
    | ^^^^^^^^^^^ Prefer \`.at(-1)\` over \`lodash.last(…)\` to get the last element.

Output:
  1 | array.at(-1)

`;

exports[`prefer-at > invalid(2): string.substring(1, 2) 1`] = `

  1 | string.substring(1, 2)

`;

exports[`prefer-at > invalid(2): string.substring(1, 2) 2`] = `

Message:
> 1 | string.substring(1, 2)
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(1)

`;

exports[`prefer-at > invalid(2): string?.charAt(string.length - 1); 1`] = `

  1 | string?.charAt(string.length - 1);

`;

exports[`prefer-at > invalid(2): string?.charAt(string.length - 1); 2`] = `

Message:
> 1 | string?.charAt(string.length - 1);
    |                ^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string?.at(- 1);

`;

exports[`prefer-at > invalid(20): array!.slice(-1)[0] 1`] = `

  1 | array!.slice(-1)[0]

`;

exports[`prefer-at > invalid(20): array!.slice(-1)[0] 2`] = `

Message:
> 1 | array!.slice(-1)[0]
    |        ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array!.at(-1)

`;

exports[`prefer-at > invalid(20): class Foo {#bar; baz() {return this.#bar[this.#bar.length - 1]}} 1`] = `

  1 | class Foo {#bar; baz() {return this.#bar[this.#bar.length - 1]}}

`;

exports[`prefer-at > invalid(20): class Foo {#bar; baz() {return this.#bar[this.#bar.length - 1]}} 2`] = `

Message:
> 1 | class Foo {#bar; baz() {return this.#bar[this.#bar.length - 1]}}
    |                                          ^^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | class Foo {#bar; baz() {return this.#bar.at(-1)}}

`;

exports[`prefer-at > invalid(20): function foo(value: NodeList | string[]) { return value[value.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(value: NodeList | string[]) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(20): function foo(value: NodeList | string[]) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: NodeList | string[]) { return value[value.length - 1]; }
    |                                                         ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: NodeList | string[]) { return value.at(-1); }

`;

exports[`prefer-at > invalid(21): (array as Foo[])[array.length - 1] 1`] = `

  1 | (array as Foo[])[array.length - 1]

`;

exports[`prefer-at > invalid(21): (array as Foo[])[array.length - 1] 2`] = `

Message:
> 1 | (array as Foo[])[array.length - 1]
    |                  ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | (array as Foo[]).at(-1)

`;

exports[`prefer-at > invalid(21): array!.slice(-1).pop() 1`] = `

  1 | array!.slice(-1).pop()

`;

exports[`prefer-at > invalid(21): array!.slice(-1).pop() 2`] = `

Message:
> 1 | array!.slice(-1).pop()
    |        ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array!.at(-1)

`;

exports[`prefer-at > invalid(21): function foo(value: string[]) { return value[value.length - 1]; } 1`] = `

  1 | function foo(value: string[]) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(21): function foo(value: string[]) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: string[]) { return value[value.length - 1]; }
    |                                              ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: string[]) { return value.at(-1); }

`;

exports[`prefer-at > invalid(22): (array as Foo[])[(array as Foo[]).length - 1] 1`] = `

  1 | (array as Foo[])[(array as Foo[]).length - 1]

`;

exports[`prefer-at > invalid(22): (array as Foo[])[(array as Foo[]).length - 1] 2`] = `

Message:
> 1 | (array as Foo[])[(array as Foo[]).length - 1]
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | (array as Foo[]).at(-1)

`;

exports[`prefer-at > invalid(22): function foo(value: string[]) { return value[value.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(value: string[]) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(22): function foo(value: string[]) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: string[]) { return value[value.length - 1]; }
    |                                              ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: string[]) { return value.at(-1); }

`;

exports[`prefer-at > invalid(23): <Foo[]>array[array.length - 1] 1`] = `

  1 | <Foo[]>array[array.length - 1]

`;

exports[`prefer-at > invalid(23): <Foo[]>array[array.length - 1] 2`] = `

Message:
> 1 | <Foo[]>array[array.length - 1]
    |              ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | <Foo[]>array.at(-1)

`;

exports[`prefer-at > invalid(23): function foo(value: readonly number[]) { return value[value.length - 1]; } 1`] = `

  1 | function foo(value: readonly number[]) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(23): function foo(value: readonly number[]) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: readonly number[]) { return value[value.length - 1]; }
    |                                                       ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: readonly number[]) { return value.at(-1); }

`;

exports[`prefer-at > invalid(24): <Foo[]>array[(<Foo[]>array).length - 1] 1`] = `

  1 | <Foo[]>array[(<Foo[]>array).length - 1]

`;

exports[`prefer-at > invalid(24): <Foo[]>array[(<Foo[]>array).length - 1] 2`] = `

Message:
> 1 | <Foo[]>array[(<Foo[]>array).length - 1]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | <Foo[]>array.at(-1)

`;

exports[`prefer-at > invalid(24): function foo(value: readonly number[]) { return value[value.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(value: readonly number[]) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(24): function foo(value: readonly number[]) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: readonly number[]) { return value[value.length - 1]; }
    |                                                       ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: readonly number[]) { return value.at(-1); }

`;

exports[`prefer-at > invalid(25): array![array.length - 1] 1`] = `

  1 | array![array.length - 1]

`;

exports[`prefer-at > invalid(25): array![array.length - 1] 2`] = `

Message:
> 1 | array![array.length - 1]
    |        ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array!.at(-1)

`;

exports[`prefer-at > invalid(25): function foo(value: string) { return value[value.length - 1]; } 1`] = `

  1 | function foo(value: string) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(25): function foo(value: string) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: string) { return value[value.length - 1]; }
    |                                            ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: string) { return value.at(-1); }

`;

exports[`prefer-at > invalid(26): array![array!.length - 1] 1`] = `

  1 | array![array!.length - 1]

`;

exports[`prefer-at > invalid(26): array![array!.length - 1] 2`] = `

Message:
> 1 | array![array!.length - 1]
    |        ^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array!.at(-1)

`;

exports[`prefer-at > invalid(26): function foo(value: string) { return value[value.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(value: string) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(26): function foo(value: string) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: string) { return value[value.length - 1]; }
    |                                            ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: string) { return value.at(-1); }

`;

exports[`prefer-at > invalid(27): function foo(value: Uint8Array) { return value[value.length - 1]; } 1`] = `

  1 | function foo(value: Uint8Array) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(27): function foo(value: Uint8Array) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: Uint8Array) { return value[value.length - 1]; }
    |                                                ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: Uint8Array) { return value.at(-1); }

`;

exports[`prefer-at > invalid(28): function foo(value: Uint8Array) { return value[value.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(value: Uint8Array) { return value[value.length - 1]; }

`;

exports[`prefer-at > invalid(28): function foo(value: Uint8Array) { return value[value.length - 1]; } 2`] = `

Message:
> 1 | function foo(value: Uint8Array) { return value[value.length - 1]; }
    |                                                ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: Uint8Array) { return value.at(-1); }

`;

exports[`prefer-at > invalid(29): const nodes = Array.from(element.children); nodes[0]; 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | const nodes = Array.from(element.children); nodes[0];

`;

exports[`prefer-at > invalid(29): const nodes = Array.from(element.children); nodes[0]; 2`] = `

Message:
> 1 | const nodes = Array.from(element.children); nodes[0];
    |                                                   ^ Prefer \`.at(…)\` over index access.

Output:
  1 | const nodes = Array.from(element.children); nodes.at(0);

`;

exports[`prefer-at > invalid(3): array.slice(-1).pop() 1`] = `

  1 | array.slice(-1).pop()

`;

exports[`prefer-at > invalid(3): array.slice(-1).pop() 2`] = `

Message:
> 1 | array.slice(-1).pop()
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-1)

`;

exports[`prefer-at > invalid(3): array.slice(-9, -8).pop() 1`] = `

  1 | array.slice(-9, -8).pop()

`;

exports[`prefer-at > invalid(3): array.slice(-9, -8).pop() 2`] = `

Message:
> 1 | array.slice(-9, -8).pop()
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-9)

`;

exports[`prefer-at > invalid(3): array[5 + 9] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | array[5 + 9]

`;

exports[`prefer-at > invalid(3): array[5 + 9] 2`] = `

Message:
> 1 | array[5 + 9]
    |       ^^^^^ Prefer \`.at(…)\` over index access.

Output:
  1 | array.at(5 + 9)

`;

exports[`prefer-at > invalid(3): array[array.length -1]; 1`] = `

  1 | array[array.length -1];

`;

exports[`prefer-at > invalid(3): array[array.length -1]; 2`] = `

Message:
> 1 | array[array.length -1];
    |       ^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(-1);

`;

exports[`prefer-at > invalid(3): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 1`] = `

  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(3): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 2`] = `

Message:
> 1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                  ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes.at(-1); nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(3): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 3`] = `

Message:
> 1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                                           ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.at(-1); _.last(nodes);

`;

exports[`prefer-at > invalid(3): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 4`] = `

Message:
> 1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                                                         ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; nodes.at(-1);

`;

exports[`prefer-at > invalid(3): string.charAt(string.length - 0o11); 1`] = `

  1 | string.charAt(string.length - 0o11);

`;

exports[`prefer-at > invalid(3): string.charAt(string.length - 0o11); 2`] = `

Message:
> 1 | string.charAt(string.length - 0o11);
    |               ^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(- 0o11);

`;

exports[`prefer-at > invalid(3): string.substring(2, 1) 1`] = `

  1 | string.substring(2, 1)

`;

exports[`prefer-at > invalid(3): string.substring(2, 1) 2`] = `

Message:
> 1 | string.substring(2, 1)
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(1)

`;

exports[`prefer-at > invalid(3): underscore.last(array) 1`] = `

  1 | underscore.last(array)

`;

exports[`prefer-at > invalid(3): underscore.last(array) 2`] = `

Message:
> 1 | underscore.last(array)
    | ^^^^^^^^^^^^^^^ Prefer \`.at(-1)\` over \`underscore.last(…)\` to get the last element.

Output:
  1 | array.at(-1)

`;

exports[`prefer-at > invalid(30): function foo(value: any) { return value[0]; } 1`] = `

Filename: file.ts

Options:
- checkAllIndexAccess: true

Code:
  1 | function foo(value: any) { return value[0]; }

`;

exports[`prefer-at > invalid(30): function foo(value: any) { return value[0]; } 2`] = `

Message:
> 1 | function foo(value: any) { return value[0]; }
    |                                         ^ Prefer \`.at(…)\` over index access.

Output:
  1 | function foo(value: any) { return value.at(0); }

`;

exports[`prefer-at > invalid(31): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 1`] = `

Filename: file.ts

  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(31): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 2`] = `

Message:
> 1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                  ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes.at(-1); nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(31): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 3`] = `

Message:
> 1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                                           ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.at(-1); _.last(nodes);

`;

exports[`prefer-at > invalid(31): const nodes = Array.from(document.querySelectorAll(\"li\")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 4`] = `

Message:
> 1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                                                         ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const nodes = Array.from(document.querySelectorAll("li")); nodes[nodes.length - 1]; nodes.slice(-1)[0]; nodes.at(-1);

`;

exports[`prefer-at > invalid(32): const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 1`] = `

  1 | const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(32): const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 2`] = `

Message:
> 1 | const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                        ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const nodes = condition ? element.children : []; nodes.at(-1); nodes.slice(-1)[0]; _.last(nodes);

`;

exports[`prefer-at > invalid(32): const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 3`] = `

Message:
> 1 | const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                                 ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.at(-1); _.last(nodes);

`;

exports[`prefer-at > invalid(32): const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); 4`] = `

Message:
> 1 | const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes);
    |                                                                                               ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const nodes = condition ? element.children : []; nodes[nodes.length - 1]; nodes.slice(-1)[0]; nodes.at(-1);

`;

exports[`prefer-at > invalid(33): const nodes = element.children; _.last(nodes as string[]); 1`] = `

  1 | const nodes = element.children; _.last(nodes as string[]);

`;

exports[`prefer-at > invalid(33): const nodes = element.children; _.last(nodes as string[]); 2`] = `

Message:
> 1 | const nodes = element.children; _.last(nodes as string[]);
    |                                 ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const nodes = element.children; (nodes as string[]).at(-1);

`;

exports[`prefer-at > invalid(34): function foo(value: unknown) { if (value instanceof NodeList) { return value[value.length - 1]; } } 1`] = `

  1 | function foo(value: unknown) { if (value instanceof NodeList) { return value[value.length - 1]; } }

`;

exports[`prefer-at > invalid(34): function foo(value: unknown) { if (value instanceof NodeList) { return value[value.length - 1]; } } 2`] = `

Message:
> 1 | function foo(value: unknown) { if (value instanceof NodeList) { return value[value.length - 1]; } }
    |                                                                              ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(value: unknown) { if (value instanceof NodeList) { return value.at(-1); } }

`;

exports[`prefer-at > invalid(35): function foo(value: any) { value.slice(-1)[0]; _.last(value); } 1`] = `

  1 | function foo(value: any) { value.slice(-1)[0]; _.last(value); }

`;

exports[`prefer-at > invalid(35): function foo(value: any) { value.slice(-1)[0]; _.last(value); } 2`] = `

Message:
> 1 | function foo(value: any) { value.slice(-1)[0]; _.last(value); }
    |                                  ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(value: any) { value.at(-1); _.last(value); }

`;

exports[`prefer-at > invalid(35): function foo(value: any) { value.slice(-1)[0]; _.last(value); } 3`] = `

Message:
> 1 | function foo(value: any) { value.slice(-1)[0]; _.last(value); }
    |                                                ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(value: any) { value.slice(-1)[0]; value.at(-1); }

`;

exports[`prefer-at > invalid(36): function foo(value: any) { value.slice(-1)[0]; _.last(value); } 1`] = `

Filename: file.ts

  1 | function foo(value: any) { value.slice(-1)[0]; _.last(value); }

`;

exports[`prefer-at > invalid(36): function foo(value: any) { value.slice(-1)[0]; _.last(value); } 2`] = `

Message:
> 1 | function foo(value: any) { value.slice(-1)[0]; _.last(value); }
    |                                  ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(value: any) { value.at(-1); _.last(value); }

`;

exports[`prefer-at > invalid(36): function foo(value: any) { value.slice(-1)[0]; _.last(value); } 3`] = `

Message:
> 1 | function foo(value: any) { value.slice(-1)[0]; _.last(value); }
    |                                                ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(value: any) { value.slice(-1)[0]; value.at(-1); }

`;

exports[`prefer-at > invalid(37): function foo(value: unknown) { value.slice(-1)[0]; _.last(value); } 1`] = `

  1 | function foo(value: unknown) { value.slice(-1)[0]; _.last(value); }

`;

exports[`prefer-at > invalid(37): function foo(value: unknown) { value.slice(-1)[0]; _.last(value); } 2`] = `

Message:
> 1 | function foo(value: unknown) { value.slice(-1)[0]; _.last(value); }
    |                                      ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(value: unknown) { value.at(-1); _.last(value); }

`;

exports[`prefer-at > invalid(37): function foo(value: unknown) { value.slice(-1)[0]; _.last(value); } 3`] = `

Message:
> 1 | function foo(value: unknown) { value.slice(-1)[0]; _.last(value); }
    |                                                    ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(value: unknown) { value.slice(-1)[0]; value.at(-1); }

`;

exports[`prefer-at > invalid(38): function foo(value: unknown) { value.slice(-1)[0]; _.last(value); } 1`] = `

Filename: file.ts

  1 | function foo(value: unknown) { value.slice(-1)[0]; _.last(value); }

`;

exports[`prefer-at > invalid(38): function foo(value: unknown) { value.slice(-1)[0]; _.last(value); } 2`] = `

Message:
> 1 | function foo(value: unknown) { value.slice(-1)[0]; _.last(value); }
    |                                      ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(value: unknown) { value.at(-1); _.last(value); }

`;

exports[`prefer-at > invalid(38): function foo(value: unknown) { value.slice(-1)[0]; _.last(value); } 3`] = `

Message:
> 1 | function foo(value: unknown) { value.slice(-1)[0]; _.last(value); }
    |                                                    ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(value: unknown) { value.slice(-1)[0]; value.at(-1); }

`;

exports[`prefer-at > invalid(39): function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); } 1`] = `

  1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); }

`;

exports[`prefer-at > invalid(39): function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); } 2`] = `

Message:
> 1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); }
    |                                                  ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(value: NodeList | string[]) { value.at(-1); _.last(value); }

`;

exports[`prefer-at > invalid(39): function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); } 3`] = `

Message:
> 1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); }
    |                                                                ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; value.at(-1); }

`;

exports[`prefer-at > invalid(4): _.last(foo.bar) 1`] = `

  1 | _.last(foo.bar)

`;

exports[`prefer-at > invalid(4): _.last(foo.bar) 2`] = `

Message:
> 1 | _.last(foo.bar)
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | foo.bar.at(-1)

`;

exports[`prefer-at > invalid(4): array.slice(-1.0).shift() 1`] = `

  1 | array.slice(-1.0).shift()

`;

exports[`prefer-at > invalid(4): array.slice(-1.0).shift() 2`] = `

Message:
> 1 | array.slice(-1.0).shift()
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-1.0)

`;

exports[`prefer-at > invalid(4): array.slice(-9, -8).shift() 1`] = `

  1 | array.slice(-9, -8).shift()

`;

exports[`prefer-at > invalid(4): array.slice(-9, -8).shift() 2`] = `

Message:
> 1 | array.slice(-9, -8).shift()
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-9)

`;

exports[`prefer-at > invalid(4): array[array.length - /* comment */ 1]; 1`] = `

  1 | array[array.length - /* comment */ 1];

`;

exports[`prefer-at > invalid(4): array[array.length - /* comment */ 1]; 2`] = `

Message:
> 1 | array[array.length - /* comment */ 1];
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(- /* comment */ 1);

`;

exports[`prefer-at > invalid(4): const nodes = [...element.children]; nodes[nodes.length - 1]; 1`] = `

  1 | const nodes = [...element.children]; nodes[nodes.length - 1];

`;

exports[`prefer-at > invalid(4): const nodes = [...element.children]; nodes[nodes.length - 1]; 2`] = `

Message:
> 1 | const nodes = [...element.children]; nodes[nodes.length - 1];
    |                                            ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const nodes = [...element.children]; nodes.at(-1);

`;

exports[`prefer-at > invalid(4): const offset = 5;array[offset + 9] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | const offset = 5;array[offset + 9]

`;

exports[`prefer-at > invalid(4): const offset = 5;array[offset + 9] 2`] = `

Message:
> 1 | const offset = 5;array[offset + 9]
    |                        ^^^^^^^^^^ Prefer \`.at(…)\` over index access.

Output:
  1 | const offset = 5;array.at(offset + 9)

`;

exports[`prefer-at > invalid(4): some.string.charAt(some.string.length - 1); 1`] = `

  1 | some.string.charAt(some.string.length - 1);

`;

exports[`prefer-at > invalid(4): some.string.charAt(some.string.length - 1); 2`] = `

Message:
> 1 | some.string.charAt(some.string.length - 1);
    |                    ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | some.string.at(- 1);

`;

exports[`prefer-at > invalid(4): string.substring(index, index + 1) 1`] = `

  1 | string.substring(index, index + 1)

`;

exports[`prefer-at > invalid(4): string.substring(index, index + 1) 2`] = `

Message:
> 1 | string.substring(index, index + 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(index)

`;

exports[`prefer-at > invalid(40): function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); } 1`] = `

Filename: file.ts

  1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); }

`;

exports[`prefer-at > invalid(40): function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); } 2`] = `

Message:
> 1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); }
    |                                                  ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(value: NodeList | string[]) { value.at(-1); _.last(value); }

`;

exports[`prefer-at > invalid(40): function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); } 3`] = `

Message:
> 1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; _.last(value); }
    |                                                                ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(value: NodeList | string[]) { value.slice(-1)[0]; value.at(-1); }

`;

exports[`prefer-at > invalid(41): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 1`] = `

  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(41): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 2`] = `

Message:
> 1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }
    |                                                               ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes.at(-1); nodes.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(41): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 3`] = `

Message:
> 1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }
    |                                                                                        ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.at(-1); _.last(nodes); }

`;

exports[`prefer-at > invalid(41): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 4`] = `

Message:
> 1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }
    |                                                                                                      ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; nodes.at(-1); }

`;

exports[`prefer-at > invalid(42): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 1`] = `

Filename: file.ts

  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(42): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 2`] = `

Message:
> 1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }
    |                                                               ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes.at(-1); nodes.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(42): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 3`] = `

Message:
> 1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }
    |                                                                                        ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.at(-1); _.last(nodes); }

`;

exports[`prefer-at > invalid(42): function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); } 4`] = `

Message:
> 1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; _.last(nodes); }
    |                                                                                                      ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo<T extends NodeList | string[]>(nodes: T) { nodes[nodes.length - 1]; nodes.slice(-1)[0]; nodes.at(-1); }

`;

exports[`prefer-at > invalid(43): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 1`] = `

  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(43): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 2`] = `

Message:
> 1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }
    |                                                                ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.at(-1); nodes?.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(43): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 3`] = `

Message:
> 1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }
    |                                                                                          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.at(-1); _.last(nodes); }

`;

exports[`prefer-at > invalid(43): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 4`] = `

Message:
> 1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }
    |                                                                                                        ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; nodes.at(-1); }

`;

exports[`prefer-at > invalid(44): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 1`] = `

Filename: file.ts

  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(44): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 2`] = `

Message:
> 1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }
    |                                                                ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.at(-1); nodes?.slice(-1)[0]; _.last(nodes); }

`;

exports[`prefer-at > invalid(44): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 3`] = `

Message:
> 1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }
    |                                                                                          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.at(-1); _.last(nodes); }

`;

exports[`prefer-at > invalid(44): function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); } 4`] = `

Message:
> 1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; _.last(nodes); }
    |                                                                                                        ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | function foo(nodes: NodeList | string[] | undefined) { nodes?.[nodes.length - 1]; nodes?.slice(-1)[0]; nodes.at(-1); }

`;

exports[`prefer-at > invalid(45): function foo(nodes: NodeList | string[]) { if (nodes instanceof NodeList) { return nodes[nodes.length - 1]; } return nodes[nodes.length - 1]; } 1`] = `

Filename: file.ts

  1 | function foo(nodes: NodeList | string[]) { if (nodes instanceof NodeList) { return nodes[nodes.length - 1]; } return nodes[nodes.length - 1]; }

`;

exports[`prefer-at > invalid(45): function foo(nodes: NodeList | string[]) { if (nodes instanceof NodeList) { return nodes[nodes.length - 1]; } return nodes[nodes.length - 1]; } 2`] = `

Message:
> 1 | function foo(nodes: NodeList | string[]) { if (nodes instanceof NodeList) { return nodes[nodes.length - 1]; } return nodes[nodes.length - 1]; }
    |                                                                                                                            ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | function foo(nodes: NodeList | string[]) { if (nodes instanceof NodeList) { return nodes[nodes.length - 1]; } return nodes.at(-1); }

`;

exports[`prefer-at > invalid(5): _.last(Array.from(element.children)); 1`] = `

  1 | _.last(Array.from(element.children));

`;

exports[`prefer-at > invalid(5): _.last(Array.from(element.children)); 2`] = `

Message:
> 1 | _.last(Array.from(element.children));
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | Array.from(element.children).at(-1);

`;

exports[`prefer-at > invalid(5): _.last(new Array) 1`] = `

  1 | _.last(new Array)

`;

exports[`prefer-at > invalid(5): _.last(new Array) 2`] = `

Message:
> 1 | _.last(new Array)
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | (new Array).at(-1)

`;

exports[`prefer-at > invalid(5): array.slice((( -9 )), (( -8 )), ).shift() 1`] = `

  1 | array.slice((( -9 )), (( -8 )), ).shift()

`;

exports[`prefer-at > invalid(5): array.slice((( -9 )), (( -8 )), ).shift() 2`] = `

Message:
> 1 | array.slice((( -9 )), (( -8 )), ).shift()
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at((( -9 )))

`;

exports[`prefer-at > invalid(5): array.slice(-1)[(( 0 ))]; 1`] = `

  1 | array.slice(-1)[(( 0 ))];

`;

exports[`prefer-at > invalid(5): array.slice(-1)[(( 0 ))]; 2`] = `

Message:
> 1 | array.slice(-1)[(( 0 ))];
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-1);

`;

exports[`prefer-at > invalid(5): array[array.length - 1.]; 1`] = `

  1 | array[array.length - 1.];

`;

exports[`prefer-at > invalid(5): array[array.length - 1.]; 2`] = `

Message:
> 1 | array[array.length - 1.];
    |       ^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(- 1.);

`;

exports[`prefer-at > invalid(5): let object = {1: 1, a: 2}; object[1] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | let object = {1: 1, a: 2}; object[1]

`;

exports[`prefer-at > invalid(5): let object = {1: 1, a: 2}; object[1] 2`] = `

Message:
> 1 | let object = {1: 1, a: 2}; object[1]
    |                                   ^ Prefer \`.at(…)\` over index access.

Output:
  1 | let object = {1: 1, a: 2}; object.at(1)

`;

exports[`prefer-at > invalid(5): string.charAt((( string.length )) - 0xFF); 1`] = `

  1 | string.charAt((( string.length )) - 0xFF);

`;

exports[`prefer-at > invalid(5): string.charAt((( string.length )) - 0xFF); 2`] = `

Message:
> 1 | string.charAt((( string.length )) - 0xFF);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(- 0xFF);

`;

exports[`prefer-at > invalid(5): string.substring(index, 1 + index) 1`] = `

  1 | string.substring(index, 1 + index)

`;

exports[`prefer-at > invalid(5): string.substring(index, 1 + index) 2`] = `

Message:
> 1 | string.substring(index, 1 + index)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(index)

`;

exports[`prefer-at > invalid(6): (( array.slice(-9, -8).shift ))() 1`] = `

  1 | (( array.slice(-9, -8).shift ))()

`;

exports[`prefer-at > invalid(6): (( array.slice(-9, -8).shift ))() 2`] = `

Message:
> 1 | (( array.slice(-9, -8).shift ))()
    |          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (( array.at(-9) ))

`;

exports[`prefer-at > invalid(6): \"string\"[1] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | "string"[1]

`;

exports[`prefer-at > invalid(6): \"string\"[1] 2`] = `

Message:
> 1 | "string"[1]
    |          ^ Prefer \`.at(…)\` over index access.

Output:
  1 | "string".at(1)

`;

exports[`prefer-at > invalid(6): _.last([...element.childNodes]); 1`] = `

  1 | _.last([...element.childNodes]);

`;

exports[`prefer-at > invalid(6): _.last([...element.childNodes]); 2`] = `

Message:
> 1 | _.last([...element.childNodes]);
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | [...element.childNodes].at(-1);

`;

exports[`prefer-at > invalid(6): array.slice(-(( 1 )))[0]; 1`] = `

  1 | array.slice(-(( 1 )))[0];

`;

exports[`prefer-at > invalid(6): array.slice(-(( 1 )))[0]; 2`] = `

Message:
> 1 | array.slice(-(( 1 )))[0];
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at(-(( 1 )));

`;

exports[`prefer-at > invalid(6): array[array.length - 0b1]; 1`] = `

  1 | array[array.length - 0b1];

`;

exports[`prefer-at > invalid(6): array[array.length - 0b1]; 2`] = `

Message:
> 1 | array[array.length - 0b1];
    |       ^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(- 0b1);

`;

exports[`prefer-at > invalid(6): const foo = []\n_.last([bar]) 1`] = `

  1 | const foo = []
  2 | _.last([bar])

`;

exports[`prefer-at > invalid(6): const foo = []\n_.last([bar]) 2`] = `

Message:
  1 | const foo = []
> 2 | _.last([bar])
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const foo = []
  2 | ;[bar].at(-1)

`;

exports[`prefer-at > invalid(6): string.charAt(string.length - (( 1 ))); 1`] = `

  1 | string.charAt(string.length - (( 1 )));

`;

exports[`prefer-at > invalid(6): string.charAt(string.length - (( 1 ))); 2`] = `

Message:
> 1 | string.charAt(string.length - (( 1 )));
    |               ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(- (( 1 )));

`;

exports[`prefer-at > invalid(6): string.substring(index - 1, index) 1`] = `

  1 | string.substring(index - 1, index)

`;

exports[`prefer-at > invalid(6): string.substring(index - 1, index) 2`] = `

Message:
> 1 | string.substring(index - 1, index)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(index - 1)

`;

exports[`prefer-at > invalid(7): \`string\`[1] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | \`string\`[1]

`;

exports[`prefer-at > invalid(7): \`string\`[1] 2`] = `

Message:
> 1 | \`string\`[1]
    |          ^ Prefer \`.at(…)\` over index access.

Output:
  1 | \`string\`.at(1)

`;

exports[`prefer-at > invalid(7): array.slice((( -1 )))[0]; 1`] = `

  1 | array.slice((( -1 )))[0];

`;

exports[`prefer-at > invalid(7): array.slice((( -1 )))[0]; 2`] = `

Message:
> 1 | array.slice((( -1 )))[0];
    |       ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | array.at((( -1 )));

`;

exports[`prefer-at > invalid(7): array[array.length - 9]; 1`] = `

  1 | array[array.length - 9];

`;

exports[`prefer-at > invalid(7): array[array.length - 9]; 2`] = `

Message:
> 1 | array[array.length - 9];
    |       ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(-9);

`;

exports[`prefer-at > invalid(7): const foo = []\n_.last( new Array ) 1`] = `

  1 | const foo = []
  2 | _.last( new Array )

`;

exports[`prefer-at > invalid(7): const foo = []\n_.last( new Array ) 2`] = `

Message:
  1 | const foo = []
> 2 | _.last( new Array )
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const foo = []
  2 | ;(new Array).at(-1)

`;

exports[`prefer-at > invalid(7): const nodes = [1, 2]; nodes[nodes.length - 1]; 1`] = `

  1 | const nodes = [1, 2]; nodes[nodes.length - 1];

`;

exports[`prefer-at > invalid(7): const nodes = [1, 2]; nodes[nodes.length - 1]; 2`] = `

Message:
> 1 | const nodes = [1, 2]; nodes[nodes.length - 1];
    |                             ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const nodes = [1, 2]; nodes.at(-1);

`;

exports[`prefer-at > invalid(7): string.charAt((( string.length - 1 ))); 1`] = `

  1 | string.charAt((( string.length - 1 )));

`;

exports[`prefer-at > invalid(7): string.charAt((( string.length - 1 ))); 2`] = `

Message:
> 1 | string.charAt((( string.length - 1 )));
    |                  ^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at((( - 1 )));

`;

exports[`prefer-at > invalid(7): string.substring(index + 1, index) 1`] = `

  1 | string.substring(index + 1, index)

`;

exports[`prefer-at > invalid(7): string.substring(index + 1, index) 2`] = `

Message:
> 1 | string.substring(index + 1, index)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(index)

`;

exports[`prefer-at > invalid(8): (( array.slice(-1) ))[0]; 1`] = `

  1 | (( array.slice(-1) ))[0];

`;

exports[`prefer-at > invalid(8): (( array.slice(-1) ))[0]; 2`] = `

Message:
> 1 | (( array.slice(-1) ))[0];
    |          ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (( array.at(-1) ));

`;

exports[`prefer-at > invalid(8): (( string )).charAt(string.length - 1); 1`] = `

  1 | (( string )).charAt(string.length - 1);

`;

exports[`prefer-at > invalid(8): (( string )).charAt(string.length - 1); 2`] = `

Message:
> 1 | (( string )).charAt(string.length - 1);
    |                     ^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | (( string )).at(- 1);

`;

exports[`prefer-at > invalid(8): array[0][array[0].length - 1]; 1`] = `

  1 | array[0][array[0].length - 1];

`;

exports[`prefer-at > invalid(8): array[0][array[0].length - 1]; 2`] = `

Message:
> 1 | array[0][array[0].length - 1];
    |          ^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array[0].at(-1);

`;

exports[`prefer-at > invalid(8): const foo = []\n_.last( (( new Array )) ) 1`] = `

  1 | const foo = []
  2 | _.last( (( new Array )) )

`;

exports[`prefer-at > invalid(8): const foo = []\n_.last( (( new Array )) ) 2`] = `

Message:
  1 | const foo = []
> 2 | _.last( (( new Array )) )
    | ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | const foo = []
  2 | ;(( new Array )).at(-1)

`;

exports[`prefer-at > invalid(8): const string = \"abc\"; string[string.length - 1]; 1`] = `

  1 | const string = "abc"; string[string.length - 1];

`;

exports[`prefer-at > invalid(8): const string = \"abc\"; string[string.length - 1]; 2`] = `

Message:
> 1 | const string = "abc"; string[string.length - 1];
    |                              ^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const string = "abc"; string.at(-1);

`;

exports[`prefer-at > invalid(8): const string = \"string\"; string[1] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | const string = "string"; string[1]

`;

exports[`prefer-at > invalid(8): const string = \"string\"; string[1] 2`] = `

Message:
> 1 | const string = "string"; string[1]
    |                                 ^ Prefer \`.at(…)\` over index access.

Output:
  1 | const string = "string"; string.at(1)

`;

exports[`prefer-at > invalid(8): string.substring(1 + index, index) 1`] = `

  1 | string.substring(1 + index, index)

`;

exports[`prefer-at > invalid(8): string.substring(1 + index, index) 2`] = `

Message:
> 1 | string.substring(1 + index, index)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | string.at(index)

`;

exports[`prefer-at > invalid(9): (( array )).slice(-1)[0]; 1`] = `

  1 | (( array )).slice(-1)[0];

`;

exports[`prefer-at > invalid(9): (( array )).slice(-1)[0]; 2`] = `

Message:
> 1 | (( array )).slice(-1)[0];
    |             ^^^^^ Prefer \`.at(…)\` over the first element from \`.slice(…)\`.

Output:
  1 | (( array )).at(-1);

`;

exports[`prefer-at > invalid(9): (( string.charAt ))(string.length - 1); 1`] = `

  1 | (( string.charAt ))(string.length - 1);

`;

exports[`prefer-at > invalid(9): (( string.charAt ))(string.length - 1); 2`] = `

Message:
> 1 | (( string.charAt ))(string.length - 1);
    |                     ^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#charAt(….length - index)\`.

Suggestion 1/1: Use \`.at(…)\`.:
  1 | (( string.at ))(- 1);

`;

exports[`prefer-at > invalid(9): array[(( array.length )) - 1]; 1`] = `

  1 | array[(( array.length )) - 1];

`;

exports[`prefer-at > invalid(9): array[(( array.length )) - 1]; 2`] = `

Message:
> 1 | array[(( array.length )) - 1];
    |       ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | array.at(-1);

`;

exports[`prefer-at > invalid(9): const bytes = new Uint8Array([1, 2]); bytes[bytes.length - 1]; 1`] = `

  1 | const bytes = new Uint8Array([1, 2]); bytes[bytes.length - 1];

`;

exports[`prefer-at > invalid(9): const bytes = new Uint8Array([1, 2]); bytes[bytes.length - 1]; 2`] = `

Message:
> 1 | const bytes = new Uint8Array([1, 2]); bytes[bytes.length - 1];
    |                                             ^^^^^^^^^^^^^^^^ Prefer \`.at(…)\` over \`[….length - index]\`.

Output:
  1 | const bytes = new Uint8Array([1, 2]); bytes.at(-1);

`;

exports[`prefer-at > invalid(9): if (foo) _.last([bar]) 1`] = `

  1 | if (foo) _.last([bar])

`;

exports[`prefer-at > invalid(9): if (foo) _.last([bar]) 2`] = `

Message:
> 1 | if (foo) _.last([bar])
    |          ^^^^^^ Prefer \`.at(-1)\` over \`_.last(…)\` to get the last element.

Output:
  1 | if (foo) [bar].at(-1)

`;

exports[`prefer-at > invalid(9): new Uint8Array([1])[0] 1`] = `

Options:
- checkAllIndexAccess: true

Code:
  1 | new Uint8Array([1])[0]

`;

exports[`prefer-at > invalid(9): new Uint8Array([1])[0] 2`] = `

Message:
> 1 | new Uint8Array([1])[0]
    |                     ^ Prefer \`.at(…)\` over index access.

Output:
  1 | new Uint8Array([1]).at(0)

`;

exports[`prefer-at > invalid(9): string.substring(index, /* comment */ index + 1) 1`] = `

  1 | string.substring(index, /* comment */ index + 1)

`;

exports[`prefer-at > invalid(9): string.substring(index, /* comment */ index + 1) 2`] = `

Message:
> 1 | string.substring(index, /* comment */ index + 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`String#at(…)\` over \`String#substring(…)\` when getting one character.

`;
